# CPP-Qt-Login-Register-Interface-Template

./: ReadMe.md  ReadMe_EN.md  user_notice_en.html  user_notice_zh.html
WelcomePage/: CMakeLists.txt  ReadMe.md  ReadMe_EN.md  main.cpp  registerpage.cpp  registerpage.h  registerpage.ui  resources.qrc  utils.cpp  utils.h  welcomepage.cpp  welcomepage.h  welcomepage.ui
build-WelcomePage-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: Accounts.db  CMakeCache.txt  build.ninja  cmake_install.cmake
build-WelcomePage-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/WelcomePage_autogen/: deps  mocs_compilation.cpp
build-WelcomePage-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/WelcomePage_autogen/EWIEGA46WW/: moc_registerpage.cpp  moc_registerpage.cpp.d  moc_welcomepage.cpp  moc_welcomepage.cpp.d  qrc_resources.cpp
build-WelcomePage-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/WelcomePage_autogen/include/: ui_registerpage.h  ui_welcomepage.h
